# ComfyUI_smZNodes

./: .gitignore  README.md  __init__.py  nodes.py  pyproject.toml  smZNodes.py
.github/workflows/: publish.yml
js/: smZdynamicWidgets.js
modules/: devices.py  mac_specific.py  prompt_parser.py  rng.py  script_callbacks.py  sd_hijack.py  sd_hijack_clip.py  sd_hijack_clip_old.py  sd_hijack_open_clip.py  sd_hijack_optimizations.py  sd_hijack_unet.py  sd_samplers_cfg_denoiser.py  sd_samplers_kdiffusion.py  shared.py
modules/hypernetworks/: hypernetwork.py
modules/text_processing/: classic_engine.py  prompt_parser.py  t5_engine.py  textual_inversion.py
modules/textual_inversion/: textual_inversion.py
text_processing/: classic_engine.py  emphasis.py  t5_engine.py  textual_inversion.py
web/: metadata.js  smZdynamicWidgets.js
web/js/: exif.js  metadata.js  smZdynamicWidgets.js
