[project]
name = "comfyui_smznodes"
description = "Nodes such as CLIP Text Encode++ to achieve identical embeddings from stable-diffusion-webui for ComfyUI."
version = "1.2.20"
license = { file = "LICENSE" }
dependencies = ["lark >= 1.1.9", "compel"]

[project.urls]
Repository = "https://github.com/shiimizu/ComfyUI_smZNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "shiimizu"
DisplayName = "ComfyUI_smZNodes"
Icon = ""
